eks-fargate-sample-nginx/kubernetes-dashboard-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "kubernetes-dashboard"
  namespace: "kubernetes-dashboard"
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
  labels:
    k8s-app: "kubernetes-dashboard"
spec:
  rules:
  - http:
      paths:
        - path: /*
          backend:
            serviceName: "kubernetes-dashboard"
            servicePort: 443
